--- a/css/lacos.css
+++ b/css/lacos.css
@@ -3,9 +3,10 @@ body {
     margin: 0;
     padding: 2rem;
     background-color: #f5f5f5; 
-    background: linear-gradient(-45deg, #d30b00, #000270, #eb0216);
+    background: linear-gradient(-45deg, #faf9f9, #9294fa, #f8f8f8);
     align-items: center;
     justify-content: center;
+    
     height: 100vh;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
